# cortex_m_rtic_stm32_fail

./: Cargo.toml
src/: main.rs
