[package]
name = "playarea"
version = "0.1.0"
authors = ["Justace Clutter <justacec@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic", branch = "master" }
stm32f4 = { version = "0.11", features = ["stm32f411", "rt"]}
panic-itm = "0.4"
#stm32f4xx-hal = {path="/Users/justaceclutter/Source/stm32f4xx_hal", features = ["stm32f411", "rt"]}
